versions/v2.0.0/rulebook.md
# 六朝何事 规则书

## 规则手册目录
1 介绍

2 配件

3 基本概念

3.1 游戏概述

3.2 地点与地图

3.3 国家板与玩家面板

3.4 资源系统

3.5 卡牌类型

4 游戏流程

4.1 游戏准备

4.2 回合流程

4.3 游戏结束

4.4 终局计分

5 行动

5.1 行动效果

5.2 快速行动

5.3 特殊行动限制

6 FAQ

## 1 介绍
八王之乱后，晋朝中央覆灭，
随即发生了永嘉南渡，大量汉人士族南下，
投奔司马睿，东晋政权建立。
由于皇室根基薄弱，
东晋一朝是中国古代历史罕见的门阀政治。
此时的北方，短短的几十年间，
北方走马灯般经历了西晋-后赵-前秦-北魏四朝，
出现了三次大分裂和三次再度统一。
东晋政权和北方政权之前也爆发数度大战。

六朝何事是一款四人半架空历史游戏。
在游戏过程中，
每个玩家扮演一个乱世中的显赫家族。
其中，三个玩家扮演东晋家族，
他们将以北伐为大旗，上演一出尔虞我诈的故事。
另一个玩家扮演北方的君主，具有雄才大略，
立志从割据政权开始逐渐统一北方。
游戏是一个半架空游戏，
没有具体的开始年份，
而是包含横跨百年的人物与事件。
游戏中的可选家族，
不仅代表着具体的历史人物，
也代表乱世之中的一种选择。

### 游戏目标
玩家通过占据地图上的地点、
完成目标、积累文化影响力来获得VP（胜利点数）。
游戏结束时，VP最高的玩家获胜。

### 核心机制
具体到游戏机制，
游戏是一个牌组构筑区控游戏。
但是和一般的牌组构筑游戏不同，
游戏中只有两个牌组；
北方玩家要进行一个牌组构筑，
三个东晋家族共同进行一个牌组的构筑。
此外，游戏使用卡牌辅助机制。
游戏中，每回合每个玩家可以使用一个朝堂行动，一个手牌行动和一个名臣行动，
以及任意次数的快速行动。
当有玩家触发终局条件，
或者达到一定回合数后，会进行终局计分。
东晋玩家既要合作对抗北方，
又要竞争获得最高VP。

## 2 配件
六朝何事包含如下配件：
- 一张A2尺寸主版图
- 一张东晋国家板
- 一个北方国家板
- 四个玩家面板
- 3个六面骰
- 177张卡牌
- 一本规则手册
- 四张游戏提示卡
- 各类标记物（VP、军力、文化、控制标记等）

卡牌（177张）：
- 11张角色牌
- 125张行动牌（事件牌、策略牌、幕僚牌、强制事件牌）
- 16张目标牌
- 5张皇帝牌
- 20张流民牌

规则
- 一本规则手册
- 四张游戏提示卡

---

## 3 基本概念
本章节介绍游戏中的各种基本概念。

### 3.1 游戏概述

#### 玩家角色
- **北方玩家**：1人，控制北方政权，目标是统一北方
- **东晋玩家**：3人，各控制一个家族，目标是北伐并积累VP
- **司马家**：非玩家角色，是东晋玩家的友方

司马家是东晋的皇室，
不是玩家。
司马家有独立的部队和军力，
是东晋三个玩家的友方。
司马家的部队和军力由东晋玩家共同管理，
司马家获得的资源会分配给东晋玩家。
终局计分时，
司马家的VP会分配给东晋玩家，
分配多的多少取决于东晋玩家的功绩和威望。

#### 游戏时长
- 最多10个回合
- 可能因触发结束条件而提前结束

#### 胜利条件
游戏结束时，VP最高的玩家获胜。

### 3.2 地点与地图

#### 主版图
主版图包含游戏地图和
文化轨、分数轨、牌库、弃牌区、流民供应堆、回合进度条。
游戏地图是一个点线式地图。
其中，每个点表示一个游戏中的地点。
每条线表示两个点之间存在连接。
此外，地图分为若干个区域，
每个地点属于一个或者多个区域。
区域包括：西凉，关中，巴蜀，荆襄，江南，中原，山西，山东，淮南，河北，幽燕，塞外。
每个区域包含一个控制权标记。
主版图表示各个玩家在地图上的控制情况。
牌库包括所有玩家要抽的卡牌。
弃牌区包括所有弃牌。
流民供应堆包含所有未打出的流民牌。
分数轨道记录各个玩家和司马家的游戏积分，
一个记录十位，一个记录个位。
文化系统包括儒学、玄学、佛学三条贡献度轨道（范围0-10），
以及对应的三条文化供应轨（标注不同位置的VP数值）。
每条文化供应轨露出的格子数称为该文化的**文化等级**。
地图上每个区域有1-2个文化空位，
用于放置文化标记（儒学/玄学/佛学）。
文化空位初始为空。游戏准备阶段，在[江南]放置1个[玄学]标记，[山东]放置1个[儒学]标记，[西凉]放置1个[佛学]标记（见§4.1步骤1）。
回合进度条记录当前回合，
包含1-10和【游戏结束】格子。
因此，游戏最多10个回合。

#### 地点
地图由多个**地点**组成，
每个地点可以被：
- 玩家占据（放置玩家的部队）
- 司马家占据（放置司马家部队）
- 中立势力占据
- 未被占据
其中，东晋玩家占据的地点，和司马家占据的地点，
都是为东晋占据的地点。

#### 连接
地点之间用线连接，表示相邻关系：
- **实线**：简单地形
- **虚线**：困难地形（进军费用+1）

#### 相邻地点
如果一个地点与玩家占据的任一地点相连，
则视为该玩家的**相邻地点**。

对于进军、转化、占据行动，"相邻"仅计算**玩家自己**占据的地点，
同一阵营其他玩家的地点不计入相邻来源；
但拥有北伐标记时，改为计算**所有友方地点**（见北伐标记）。
东晋玩家计算"相邻"地点时，东晋首都的所有相邻地点，也视为相邻地点。

**无地点兜底**：如果一名玩家没有占据任何地点：
- **东晋玩家**：计算进军/占据/转化相邻时，
  将所有友方地点（其他东晋玩家 + 司马家占据的地点）视为自己占据。
- **北方玩家**：将【河北】【幽燕】【塞外】的所有地点视为自己的相邻地点。

#### 友方地点
- **北方玩家**：只有自己占据的地点是友方地点
- **东晋玩家**：任意东晋玩家占据的地点、司马家占据的地点都是友方地点

#### 边境地点
对于东晋玩家，边境地点指一个地点，至少一个相邻地点是非友方地点。
东晋玩家的部分行动会指定只能在边境地点执行。

#### 连续道路
有些效果规定，
从a地点到b地点有一条连续道路。
这需要一条从a到b的线路，
中间经过每一个地点，
都是友方地点，
包括a和b。

#### 北伐标记
- 初始放置在东晋国家板上，不属于任何玩家
- 通过卡牌效果获取，可使用一回合
- 拥有北伐标记的东晋玩家，计算相邻地点时（进军/占据/转化），可以将**所有友方地点**（其他东晋玩家占据 + 司马家占据）视为你占据的地点
- 拥有北伐标记的东晋玩家，本回合获得3次威望时，可以提高1级顺位
- 每回合结算阶段归还东晋国家板

#### 地点占据
当部队放置到地点上时，
该地点被该部队所属方占据。

#### 区域控制
当任意地点占据权变化时，
检定该区域控制权。
区域控制分为**部分控制**和**完全控制**两种：

- **部分控制**：满足控制阈值条件，获得区域控制标记。
- **完全控制**：占据该区域的全部地点，同时获得部分控制的所有效果。

**控制阈值** = 区域地点总数 ÷ 2（向下取整）

| 条件 | 结果 |
|-----|------|
| 单一玩家占据地点数 > 控制阈值 | 该玩家获得区域控制标记 |
| 司马家+东晋玩家占据地点数 > 控制阈值 | 司马家获得区域控制标记 |
| 以上都不满足 | 控制标记放回主版图 |

在计算进军费用时，如果目标地点被该区域控制者的友方占据，进军费用+1。

### 3.3 国家板与玩家面板

#### 东晋国家板
东晋国家板包括东晋当前的玩家行动顺位，
东晋君主牌，君主年龄轨，
东晋牌库，东晋弃牌区，东晋出牌区，
功绩、威望轨，
以及司马家的部队储备区和军力条。
其中，功绩、威望、军力三个轨道，
范围都是0-9。
威望轨上有四个标记：
三位东晋玩家各有一个标记，
司马家有一个标记。
其中，东晋君主牌最上面一张正面朝上。
游戏进行中，
东晋当前回合的候选策略牌，
会放置在东晋国家板旁边的朝堂区中。
君主年龄轨记录当前君主存在的回合数。

本回合行动顺位最靠前的东晋玩家称为**宰辅**。
宰辅可能受到特定卡牌效果的增益或惩罚。
每回合准备阶段时，将**宰辅**标记交给顺位最靠前的东晋玩家；
回合结束时，将**宰辅**标记放回东晋国家面板。

东晋玩家在游戏过程中，会获得功绩/威望。
功绩/威望轨道最高是9。
如果玩家在功绩/威望轨道已经达到最大值，
再次获得功绩/威望时，
每获得1点，
可以选择1个功绩/威望轨道的标记，后退1格，最多退到0。

#### 北方国家板
北方国家板包括北方牌库，北方弃牌区，北方出牌区。
游戏进行中，
北方当前回合的候选策略牌，
会放置在北方国家板旁边的朝堂区中。

**朝堂区**：
每个国家板旁边都有一个朝堂区，
用于放置当前回合可以执行朝堂行动的候选策略牌。
玩家可以在自己的行动阶段，
从朝堂区中选择候选策略牌执行朝堂行动或者名臣行动。

**出牌区**：
放置本回合已执行的策略牌，
保证一张牌不会在一回合内被执行两遍。
回合结束时（非玩家行动结束时），
出牌区的牌加入弃牌区。

#### 牌库与DBG机制
北方国家板和东晋国家板都包含牌库，
包含策略牌，
使用DBG机制。
策略牌进入国家牌库的方式：
- 玩家手牌行动打出策略牌时，放入所在国家的牌库顶
- 弃牌区重洗时进入牌库

当需要向朝堂区补充卡牌时，
从牌库顶部拿取牌，
放置到朝堂区。
如果需要补牌，
但是牌库为空时，
立刻将弃牌区重新洗混，
放置到牌库区。
如果牌库和弃牌区都为空，
则无法执行摸牌效果。

#### 玩家面板
玩家面板放置玩家的角色牌。
玩家面板具有军力条，部队储备区和等级轨道。
在玩家面板的边缘，有一个史书区，
旁边放置玩家存档的牌。
北方玩家面板和东晋玩家面板是不同的，
北方玩家面板的部队储备区中的部队总数更多。

#### 部队储备区
东晋国家板和玩家面板都具有部队储备区，
部队储备区使用露出机制。
需要在主版图上放置部队棋子时，
按照从左到右、从上到下的方式拿取，
露出的最后一个格子，
会显示vp和军力资源。
其中，vp表示终局计分时的vp，
军力资源表示每个玩家行动结束时获得的军力。
主版图上的部队越多，
每回合获得的军力越多，
终局计分时的vp也越多。
玩家国家板的部队储备区放置的是玩家的部队，
东晋国家板放置的是司马家的部队。

在游戏进行过程中，
部队或者放置在主版图上，
或者放置在部队储备区中。
任意时刻，
部队成为进军、转化、替换的目标时，
放置到对应的部队储备区中。
任意玩家将储备区中的
最后一个部队从储备区拿走时，
会触发游戏结束条件，
游戏会在这一回合结束时结束。
即使在这一回合中，
该部队被放回储备区，
游戏结束的时机也不会改变。
司马家的最后一个部队
放置到主版图上时，
没有特殊效果，
也不触发游戏结束。

游戏中，有一种卡牌效果是“将部队储备区的1个部队放回游戏盒中。”，
此时，部队会放回游戏盒中，本局游戏不再出现。

#### 首都标记
司马家有一个特殊的部队，
是首都标记。
在初始设置时，
首都标记放置在建康。
游戏过程中任意时刻，
如果首都标记被移除，
需要立刻重新放置。
重新放置的地点
由拥有**宰辅**标记的东晋玩家选择；
可以选择任意东晋占据的地点。
被选择的地点，
原来的部队放回储备区。
如果被选择地点是东晋玩家占据的地点，
该东晋玩家获得1功绩。
东晋玩家计算相邻地点时，
所有与东晋首都相邻的地点，
也视为玩家的相邻地点。

#### 等级轨道
每个玩家有一个等级轨道，
标记玩家在内政、军事、文化、权谋方面的等级。
玩家在游戏过程中，
各个等级会不断提升，
代表玩家扮演的角色的能力不断增强；
各等级达到2级后，会获得等级奖励；
之后每次手牌行动或朝堂行动中，
使用带有对应标记的牌时，
都会获得额外奖励。
各等级达到5级后，会获得新的等级奖励，
每回合解锁一个额外行动。
具体的等级奖励，以及等级如何提升，
会在后续章节介绍。

### 3.4 资源系统

#### 卡牌
**获取方式**：
- 每回合摸牌阶段：2张
- 快速行动-摸牌：1张（每回合限1次）
- 一些卡牌效果也会让玩家摸牌

**使用方式**：
- 作为费用支付（放入弃牌区）
- 作为手牌行动打出

**限制**：
- 手牌无上限
- 玩家的行动结束时最多保留8张

#### 军力
**获取方式**：
- 每个玩家行动结束时：基于部队储备区露出的数字获得军力
- 快速行动-征募：弃1张手牌获得1军力
- 候选策略牌资源选项
- 从卡牌效果获得军力

**使用方式**：
- 支付快速行动费用
- 支付朝堂行动、手牌行动、名臣行动的费用

**限制**：
- 无上限
- 玩家行动结束时清0

**司马家军力**：
- 司马家也有军力条
- 每回合准备阶段，投掷君主骰后，若司马家军力>6，则分配给三名东晋玩家各1军力，司马家军力-3。重复此步骤，直至司马家军力≤6

### 3.5 卡牌类型

#### 角色牌
每个玩家在准备阶段会从候选角色中选择一张角色牌。
每个角色牌自带三张起始牌。
角色牌在游戏过程中，
正面朝上放置在玩家的面板上。
游戏过程中，
角色牌不能新增、不能移除、不能替换。
玩家每局游戏只会有一张角色牌，
它代表玩家扮演的角色。
角色牌通常具有一个登场效果，
在准备阶段结算；
东晋角色牌还具有先动值，
决定初始行动顺序。
角色牌通常还具有一个能力，
在整局游戏发挥作用，
有可能是每回合主动发动一次，
也有可能是被动效果。

#### 行动牌（三种）
| 类型 | 说明 | 使用方式 |
|-----|------|---------|
| **事件牌** | 强力一次性效果 | 打出后结算效果，放入弃牌区 |
| **策略牌** | 代表政策，供后续选择 | 放入国家弃牌区，成为候选策略牌 |
| **强制事件牌** | 特殊机制 | 摸到后立刻结算，不能保留 |

行动牌是游戏进行的核心。
玩家的手牌、主版图的牌库、东晋或北方国家面板的牌库、玩家的史书区都由行动牌组成。
行动牌细分为三种，
每种的使用方法不同。
作为手牌时，
除了强制事件牌以外，
每种行动牌都有两种使用方法：
第一种方法是将其作为费用打出，
用于支付手牌行动、快速行动的费用；
第二种方法是作为手牌行动打出。
不同种类的行动牌，
进行手牌行动时效果不同。

策略牌通常代表东晋时代的一个政策，
供玩家之后选择朝堂行动或名臣行动。

事件牌则是强力的一次性效果。

强制事件牌较为特殊。
玩家每次摸牌后，
如果摸到强制事件牌，
必须立刻打出结算，
然后放置到弃牌区旁边（不放入弃牌区）。
任意玩家行动结束时，
检查弃牌区旁边的强制事件牌数量，
如果达到3张，
则将所有强制事件牌洗回牌库。
大部分强制事件牌代表一个独特的游戏机制，
会在意想不到的时间点发生。

#### 数值归属
除非卡牌另有说明，
等级、贡献度、威望、功绩等数值，
默认只计算玩家自己的。

#### 卡牌标记
行动牌上可能会有标记。
标记具体包含以下几种：
军事、文化、内政、权谋。
一些行动牌、角色牌、等级奖励会让玩家打出指定标记的牌时获得增益或惩罚。
如果没有提及，
则可以忽视标记。

#### 公共行动牌
公共行动牌是放置在主版图旁边的特殊牌。
每回合开始时，将公共行动牌区重置为完整状态。
所有玩家在自己的行动阶段，都可以选择执行公共行动牌。

执行公共行动牌需要支付牌上标注的费用。
每张公共行动牌在每个回合中最多被执行一次。
执行公共行动牌视为执行一次手牌行动，执行后不可再执行其他手牌行动。
公共行动牌可以带有标记（军事、文化、艺术、权谋等）。
带有标记的公共行动牌执行时，会触发相应标记的效果。

部分公共行动牌会标注"仅限北方玩家"或"仅限东晋玩家"。
如果标注了限制，则只有对应阵营的玩家可以执行该牌。

#### 卡牌使用限制

##### 阵营限定
部分行动牌会标注"仅限北方玩家"或"仅限东晋玩家"。
如果标注"仅限北方玩家"，则只有北方玩家可以打出或执行该牌。
如果标注"仅限东晋玩家"，则只有东晋玩家可以打出或执行该牌。
如果没有标注，则所有玩家都可以使用。

##### 僭越效果
带有【僭越】标记的牌，效果分为两部分：
基本效果，任何满足条件的玩家都可以结算；
僭越效果，只有当东晋玩家的威望高于其他东晋玩家和司马家时，才能结算。

#### 卡牌能力类型

行动牌上的能力分为不同类型，具体说明如下：

##### 策略牌能力
- **朝堂效果**：作为朝堂行动执行时结算的效果
  - 使用限制：仅在执行朝堂行动时触发
  - 示例："朝堂：3军力"
  
- **名臣效果**：作为名臣行动执行时结算的效果
  - 使用限制：仅在执行名臣行动时触发
  - 示例："名臣：1军力，补充1次"

- **被动效果**：持续存在的效果，通常与特定条件或地点相关
  - 使用限制：只要策略牌在朝堂区且条件满足即生效
  - 示例："被动：友方控制[幽燕]时，才能作为策略牌打出"
  
- **资源效果**：回合结束时，没有执行的候选策略牌转化为资源。
  - 示例：在卡牌下方，以图标+数字的形式展现。红色的刀剑表示军力资源，蓝色的笔表示vp资源。

##### 角色牌能力
- **主动技能**：玩家可以主动触发的技能
  - 使用限制：每回合限一次，在玩家行动阶段执行
  - 示例："主动：执行一次免费进军"

- **被动技能**：自动触发的技能，当满足特定条件时生效
  - 使用限制：无次数限制，只要满足条件即触发
  - 示例："被动：每次获得功绩后，摸1张牌"

- **登场效果**：角色牌在游戏开始时结算的一次性效果
  - 使用限制：仅在游戏准备阶段结算一次
  - 示例："登场：转化[长安][天水][安定]"
  
##### 行动牌能力
- **未标注**：打出事件牌立刻结算
- **终局**：在存档区，游戏结束，终局计分时结算效果
  - 示例："终局：获得X vp，X=内政等级数"

#### 目标牌
目标牌代表东晋玩家的游戏目标。
每个东晋玩家会收到三张目标牌，
选择两张使用，
一张展示，
一张隐藏。
终局计分时，
会展示目标牌并结算分数。
目标牌计分仅与终局状态有关，
与游戏进行中的状态无关。

#### 君主牌
君主牌代表东晋当前的君主。
每回合准备阶段，
根据司马家当前军力决定投掷君主骰的数量：
每有3军力，投掷1个君主骰（最多5个）。

投掷君主骰后，根据骰面结果处理：
- 若骰面为[艺术]：司马家直接获得2vp，该骰子移走；
- 若骰面为其他结果：将该骰子放置在君主牌上，作为本回合的任务标记。

在东晋玩家的行动中，
如果该玩家完成了对应的任务，
则可以移除该骰子，
并获得2vp作为奖励。

**任务类型**：
- 扩张：在指定区域执行进军或转化，且必须放置司马家部队。
- 加固：执行一次加固行动，加固行动的目标必须是司马家的部队。
- 文化：在朝堂行动或手牌行动中，使用1张带[文化]标记的牌。
- 改革：进行一次策略牌的手牌行动，或者存档一张候选策略牌。

君主牌堆共6张：纯质×2、雅好×1、守成×1、躬亲×1、中庸×1。
每张君主牌的骰面任务分布不同，具体见卡牌描述。

## 4 游戏流程

### 4.1 游戏准备
游戏准备阶段，按顺序执行以下流程：
1. 按图示，设置主版图，东晋国家板，北方国家板。在地图上按照每个地点的标识，放置司马家或中立部队。在[江南]区域放置1个[玄学]标记，在[山东]区域放置1个[儒学]标记，在[西凉]区域放置1个[佛学]标记。
2. 每位玩家将自己的一个标志物放置在儒学、玄学、佛学贡献度轨道的【0】的位置。
3. 每位玩家将自己的一个标志物放置在内政、军事、权谋、文化等级轨道的【0】的位置。
4. 每位玩家将自己的一个标志物放置在vp轨道的【0】的位置。司马家的vp指示物放置在vp轨道的【0】的位置。
5. 玩家需要提前协商，一个玩家扮演北方玩家，另外三个玩家扮演东晋玩家。
6. 将每个可选角色牌和该玩家的卡牌设置为1叠，给每个玩家随机分配2个可选角色牌组。注意，北方玩家和东晋玩家使用不同的牌组。然后，给每个东晋玩家发放三个目标牌。给北方玩家发放两张北方起始牌。所有玩家可以自由阅读自己获得的牌的内容。将其余行动牌洗混，放置在主版图的牌库处。每个玩家获得其两个可选角色的全部6张起始牌（每个角色各3张），再从行动牌库摸2张牌，共8张起始手牌。如果摸到强制事件牌，直接弃掉并重新摸取。
7. 每个玩家要选择一个角色牌。东晋玩家要选择两个目标牌。北方玩家选择一张北方起始牌保留。然后，每个玩家从该角色的起始牌中，选择一张暗置打出。北方玩家如果不想选择角色的起始牌，也可以选择一张北方起始牌暗置打出。然后，将未选择的角色牌、目标牌、北方起始牌背面朝上放到主版图的弃牌区。
8. 所有玩家一起公开角色牌，以及暗置打出的牌。每个东晋玩家公布两张目标牌中靠上的一张，将另一张压到玩家面板下。然后，北方玩家先结算角色牌的登场效果，并结算暗置打出的牌。东晋玩家根据角色牌的先动值判断初始行动顺序，所有玩家的标记放置在行动顺序轨的起始格，按先动值从低到高堆叠。然后依次结算角色牌的登场效果，并支付费用、结算暗置打出的牌。玩家获得角色牌上的标记对应的1级初始等级（比如【刘裕】获得1级军事）。东晋玩家展示自己选择的目标牌。
9. 随机选择一张东晋君主牌，放置在君主牌牌库顶。君主年龄轨放置在【1】的位置。基于君主牌的起始威望，司马家威望指示物放置在威望轨的对应位置。每位东晋玩家将自己的威望标记放置在威望轨上。
10. 东晋玩家将自己的军力条设定于1的位置。北方玩家将自己的军力条设定于5的位置。司马家军力条设定于2的位置。
11. 将东晋、北方的起始牌放置到国家板旁，作为候选策略牌。国家板上的牌库和弃牌区初始为空。
    - 东晋国家初始牌库（10张）：3×士卒、2×流民、1×宫廷、1×加官进爵、1×北伐、1×征辟人才、1×太常寺
    - 北方国家初始牌库（10张）：5×士卒、2×流民、1×宫廷、1×征辟人才、1×轻骑兵
12. 将公共行动牌放置在主版图旁边。

### 4.2 回合流程
每个回合分为以下几个阶段：
准备阶段、行动阶段、结算阶段。
其中，行动阶段是每个玩家依次行动。
在行动阶段中，每个玩家首先进行摸牌，
然后可以以任意顺序执行
一个手牌行动、一个朝堂行动、一个名臣行动和任意次快速行动。

#### 准备阶段
准备阶段中，首先将所有背面的区控标记翻回正面。
然后结算东晋君主牌：
根据司马家当前军力，
每有3军力投掷1个君主骰（最多5个）。
骰面为[艺术]时，司马家获得2vp，该骰子移走；
骰面为其他结果时，将该骰子放在君主牌上作为任务标记。
基于行动顺序轨，放置东晋玩家的行动顺序轨。
如果两位东晋玩家在行动顺序轨的同一格，标记靠上的玩家优先行动。
然后，将公共行动牌区重置为完整状态。
然后，结算司马家区控奖励：
如果司马家拥有任意区域的正面控制权标记，
根据控制权标记获得vp。
如果控制多个区域，
则获得这些区域的vp之和。
所有结算过的区控标记翻到背面，
背面的区控标记本回合不再结算。

#### 行动阶段
行动阶段中，每个玩家依次行动。
北方玩家首先行动。
然后每个东晋玩家按行动顺序轨的顺序行动。
每个玩家完成所有行动后，确认结束行动，然后下一位玩家行动。

轮到一位玩家行动时，首先执行区控奖励结算。
如果该玩家拥有任意区域的正面控制权标记，
根据控制权标记获得vp。
如果控制多个区域，
则获得这些区域的vp之和。
所有结算过的区控标记翻到背面，
背面的区控标记本回合不再结算。
然后执行摸牌行动。
这位玩家从主版图的牌库摸2张牌。
如果摸到的牌包含强制性事件牌，
必须立刻结算强制性事件牌的效果。
然后，玩家可以以任意顺序执行一个手牌行动、
一个朝堂行动、一个名臣行动和任意次快速行动。

**手牌行动**：
玩家可以从自己的手牌中选择一张，
支付该手牌的费用，
然后结算该手牌的效果。
- **事件牌**：结算该事件，完成后放入主版图弃牌区（除非另有说明）
- **策略牌**：放入所在国家的牌库顶

手牌的费用在0-3之间，
标记在卡牌左上角。
作为费用支付的手牌，
放入弃牌区。

**朝堂行动**：
玩家可以从对应国家的候选策略牌中选择一张，
结算该策略牌的朝堂行动效果。
行动效果可能需要支付资源，
具体以牌面描述为准。
如果无法支付资源，
则无法选择该策略牌。
如果所有候选策略牌都无法支付，
则无法执行朝堂行动。
完成后，
将被选择的策略牌放入所在国家的出牌区，
表示该牌本回合已被执行。
如果一张候选策略牌没有朝堂行动效果，
不能选择其作为朝堂行动。

**名臣行动**：
玩家可以从对应国家的候选策略牌中选择一张，
结算该策略牌的名臣行动效果。
行动效果可能需要支付资源，
具体以牌面描述为准。
如果无法支付资源，
则无法选择该策略牌。
如果所有候选策略牌都无法支付，
则无法执行名臣行动。
完成后，
将被选择的策略牌放入所在国家的出牌区，
表示该牌本回合已被执行。
如果一张候选策略牌没有名臣行动效果，
不能选择其作为名臣行动。

玩家结束行动时，
将军力置为0；
如果手牌数量超过8张，
则需要将多余的手牌放入弃牌区。

#### 结算阶段
结算阶段，进行如下操作：
首先，检查游戏结束标记是否已经被拿取，
如果被拿取，
则游戏结束，进入终局计分阶段；
否则进入下一回合。

然后，所有北方国家板的未被选择的候选策略牌，
按照资源选项进行结算；
一般情况下，
这会让北方玩家获得vp和军力。
然后将所有候选策略牌放入北方国家板的弃牌区。
从北方国家板的抽牌区顶部摸10张牌，
变为下回合的候选策略牌。
然后，所有东晋国家板的未被选择的候选策略牌，
按照资源选项进行结算；
一般情况下，
这会让司马家获得军力和vp。
然后将所有候选策略牌放入东晋国家板的弃牌区。
从东晋国家板的抽牌区顶部摸10张牌，
变为下回合的候选策略牌。
然后，每位玩家基于自己的玩家板，
获得基于部队预备区状况的军力。

完成资源结算后，
将所有锁定状态（背面朝上）的文化标记翻至正面。

然后进行东晋君主结算。
投掷一枚骰子，
如果点数严格大于当前君主年龄轨的数字，
则将君主年龄轨上的标记右移一格，
表示当前君主年龄增加，
并且将威望轨上的东晋标记右移一格；
否则，当前君主驾崩。
将君主年龄轨上的标记返回【1】的位置，
然后重洗君主牌堆，
将顶牌翻面，
按照当前君主牌，
重新设置威望轨上的东晋标记。

最后，将回合进度条上的标记前移一格。
如果到达【游戏结束】，进行终局计分。

### 4.3 游戏结束
游戏有三种结束方式。
- 游戏中任意阶段，任意玩家拿取自己的版图上部队储备区的最后一个部队，并放置到版图上时，获得游戏结束标记。当回合的结算阶段，游戏结束并进行终局计分。获得该标记的玩家额外获得5vp。
- 游戏中任意阶段，任意玩家在计分轨达到150vp时，获得游戏结束标记。当回合的结算阶段，游戏结束并进行终局计分。获得该标记的玩家额外获得5vp。
- 第十回合的结算阶段，游戏结束并进行终局积分。

*注意：司马家部队耗尽不触发游戏结束*

### 4.4 终局计分
游戏最后，具有最高vp的玩家胜利。
按照以下顺序，结算各位玩家的分数。

第一步，结算文化分数。
分别统计地图上儒学、玄学、佛学三种文化标记的总数。
每条文化供应轨上，
根据该文化在地图上的标记总数，
露出对应位置的格子。

每条文化供应轨的每个位置标有一个VP数值。
设该文化地图上共有N个标记，
则供应轨露出位置N。
将该轨露出的最大的三个位置的VP数值，
从大到小分配给该文化贡献度排名第一、二、三名的玩家。
第四名不获得VP。
如果N<3，
则只有前N名玩家获得VP。

如果多位玩家贡献度相等，
则获得VP平分（向下取整）。
如果某条文化的地图标记总数为0，
则所有玩家在该文化上不获得VP。

第二步，结算区域控制奖励。
此时，如果司马家或任意玩家拥有任意区域的控制权标记，
根据控制权标记获得vp。
司马家和所有玩家，
基于部队储备区露出的最后一个格子获得vp。

第三步，结算史书区奖励。
史书区vp已在存档时加入vp轨，
此步骤不再重复结算。

第四步，结算司马家国家分数。
计算司马家当前的vp总和。
每有10vp，
司马家基础分数奖励+1。
然后计算各个东晋玩家在威望、功绩轨道上的排名，
忽视威望轨道上的司马家标记。
每条轨道上的第一、二、三名，
系数增加3、2、1。
但若某条轨道上，
东晋玩家的功绩或威望不足3，
则其不能获得该轨道上的系数；
其系数转移给该轨道的第一名。
如果多位玩家在轨道上排名相同，
则按照东晋行动顺序轨道的顺序，
顺位靠前的玩家排名靠前。
然后，每名东晋玩家获得vp，
数值等于司马家基础分数奖励*系数。

第五步，每位东晋玩家公布自己的秘密目标，
和公开目标一起，
根据是否完成获得vp。

最后，vp最高的玩家获胜。
平手时，史书区牌最多的玩家获胜。
仍然平手时，北方玩家优于东晋玩家。
东晋玩家之间，行动顺位靠前的玩家获胜。

## 5 行动
行动分为四种触发方式，
朝堂行动、手牌行动、名臣行动、快速行动。
朝堂行动、名臣行动和手牌行动在之前的章节已经介绍。

东晋玩家可以通过以下方式获得威望：
每次对非友方地点执行进军或转化行动时，
获得1威望。

东晋玩家可以通过以下方式获得功绩：
每次存档候选策略牌时，
获得1功绩；
每次用手牌行动将策略牌加入牌库时，
根据策略牌的费用获得功绩。
如果是1费牌，获得1功绩；如果是2费牌，获得1功绩3vp；如果是3费牌，获得2功绩。

### 5.1 行动效果
以下是游戏中所有具体行动的效果描述：

#### 5.1.1 占据
占据是指玩家将自己的一个部队放置到主板图的一个未被占据的地点上。
需要注意的是，
东晋玩家可以通过获取北伐标记，
来增加自己可以执行占据行动的候选地点。
其他需要选择相邻地点的行动，
也可以通过北伐标记扩大范围。

在东晋玩家执行占据时，
如果司马家军力大于0，
可以不放置自己的部队，
而是放置司马家的部队。
此时，司马家的军力减1。

#### 5.1.2 进军
玩家执行进军行动时，
选择一个地点，
移除该地点上的部队。
如果目标地点不是友方地点，
执行进军行动后，
玩家会获得1vp；
如果玩家是东晋玩家，
还可以获得1威望。
注意，一些事件牌的效果会让玩家移除部队，
如果没有注明是进军
则不视为进军行动。

#### 5.1.3 提高行动顺位
仅限东晋玩家。
将自己的玩家标记在行动顺位轨上前进一格。
如果当前格已经有其他玩家，
则将玩家标记放置在已有的标记之上。
注意，
回合内提高行动顺位时，
不会修改本回合的行动顺序。

#### 5.1.4 存档
执行存档行动时，
将一张行动牌放置入自己的史书区，
并立刻获得该牌的史书vp（加入vp轨道）。
存档效果一般会指定可以放置的牌，
一般是国家板的候选策略牌，
用于清除低级牌，
提高牌库的质量。
东晋玩家每次对候选策略牌进行存档行动时，
可以获得1功绩。
另一个常见场合是，
一些事件会在结算完成后，
放入使用者的史书区，
此时也立刻获得该牌的史书vp。

如果存档的牌具有内政/军事/文化/权谋标记，
在存档完成时，
提高1级对应的等级。

#### 5.1.5 转化
玩家执行转化行动时，
可以选择一个被占据的地点，
移除其原有的部队，
然后放置自己的1个部队。
一般的转化行动，
都会附带具体的条件。

东晋玩家对非友方地点进行转化后，获得1威望和1vp。
东晋的首都不能被转化。

#### 5.1.6 传播文化
执行传播文化行动时，
玩家选择儒学、佛学、玄学中的一种文化，
在地图上的一个区域中放置1个该文化的标记。

放置位置需满足以下任一条件：
- 己方控制该区域；
- 该区域与该文化已存在的区域相邻。

放置时，如果目标文化空位已有其他文化标记，
则将其移除并替换为本次传播的文化标记。
如果目标文化空位为空，
则获得放置奖励，
具体奖励数值标注在地图该空位旁（各空位奖励可能不同）。

每次放置文化标记后，
根据当前放置的文化类型，
获得VP，
数值等于该区域及相邻区域中该文化标记的总数，
上限5vp。
然后，将该文化的贡献度轨道提高1级。

如果贡献度轨道已达最高级（10级），
则改为获得3vp，
不再提高贡献度。

注意：
- 传播文化行动只能通过卡牌效果执行，不属于快速行动
- 文化空位被替换时，不会影响任何玩家的贡献度
- 新放置的文化标记背面朝上，处于锁定状态；锁定状态下，该文化标记不能被覆盖或移除。回合结算阶段，将所有锁定的文化标记翻至正面。

#### 5.1.7 加固
将一个加固标记，
放置在一个友方地点上。
一个地点只能有一个加固标记。
当有加固标记的地点的部队被移除时，
移除加固标记。

#### 5.1.8 检索
检索一种指定类型的牌。
从牌库顶，
依次展示牌库顶牌，
如果符合条件，
则加入手牌；
如果不符合条件，
则将该牌放入弃牌堆。
如果是强制性事件牌，
将其放在一旁，
不触发事件。
检索结束后，
将所有放在一旁的牌洗回牌库。

#### 5.1.9 提升等级
提升一级等级，在内政、文化、军事、权谋中选择一个，
在等级轨道提高一级。
如果卡牌效果标明了具体类别，
比如“提升一级内政等级”，
则不能进行选择。

#### 5.1.10 支付
一些卡牌的描述是，"支付xx，然后yy"。
此时，必须先执行xx费用，然后才能执行yy对应的效果。
如果无法支付，则跳过后续效果的结算。

### 5.2 等级奖励
玩家在提升等级后，再执行对应的朝堂行动或手牌行动时，会获得效果增强。
下面介绍等级效果
#### 5.2.1 内政
当玩家内政达到2级后，
每次朝堂行动或手牌行动使用包含内政标记的牌时，
摸1张牌。
当玩家内政达到5级后，
每回合额外获得1级名臣行动，
但是只能选择带有内政标记的候选策略牌。

#### 5.2.2 军事
当玩家军事达到2级后，
每次朝堂行动或手牌行动使用包含军事标记的牌时，
可以支付1vp，然后获得2军力。
当玩家军事达到5级后，
每回合额外获得1级名臣行动，
但是只能选择带有军事标记的候选策略牌。

#### 5.2.3 文化
当玩家文化达到2级后，
每次朝堂行动或手牌行动使用包含文化标记的牌时，
获得3vp。
当玩家文化达到5级后，
每回合额外获得1级名臣行动，
但是只能选择带有文化标记的候选策略牌。

#### 5.2.4 权谋
当玩家权谋达到2级后，
每次朝堂行动或手牌行动使用包含权谋标记的牌时，
获得1军力和1vp。
当玩家权谋达到5级后，
每回合仅限1次，
可以选择1个东晋角色，提高或降低1级功绩或威望。

#### 5.2.5 等级范围
等级范围是0-5。
当等级达到最大值（5）时，如果获得等级提升，
不再提升等级，而是获得该等级2级对应的等级奖励一次。

### 5.3 快速行动
快速行动是玩家在行动阶段可以执行的行动，
每个玩家可以执行任意次数快速行动。
以下是所有快速行动的汇总：

**占据**：
- 费用：1军力
- 效果：对相邻未被占据的地点执行占据行动

**进军**：
- 费用：基础费用3军力
- 效果：对相邻非友方地点执行进军行动
- 费用调整：
  - 目标地点经过加固：+1
  - 只能通过困难地形相连：+1
  - 目标地点被占据者友方控制：+1
- 最低费用：1军力
- 注明免费的进军：不需要执行任何费用

**摸牌**：
- 费用：2军力
- 效果：从主版图牌库摸一张牌
- 限制：每回合限一次

**征募**：
- 费用：支付1张手牌
- 效果：获得1军力

**加固**：
- 费用：1军力
- 效果：执行一次加固行动
- 限制：每回合限一次

### 5.3 特殊行动限制

#### 5.3.1 僭越
一些手牌的描述中，
包含【僭越】的描述。
这是指，
东晋玩家结算【僭越】效果时，
如果威望高于其他东晋玩家和司马家，
才能结算后续的效果。

#### 5.3.2 进军费用减免
每次[进军]的费用减1效果不能叠加。
如果多个效果同时提供进军费用减免，
只生效一次。

## 6 FAQ
记录游戏中的常见问题及解答。

### 资源类
**Q：手牌上限是多少？**
A：游戏过程中无上限，
但行动结束时最多保留8张，
多余需放入弃牌区。

**Q：军力可以保留到下一回合吗？**
A：不可以。行动结束时军力清0。

**Q：司马家如何获得VP？**
A：司马家获得vp的方式包括：
拥有区域控制标记时，
根据控制权标记获得vp；
东晋候选策略牌未被选择时，
按照资源选项获得vp。

### 行动类
**Q：如果所有候选策略牌都无法支付怎么办？**
A：跳过朝堂行动。

**Q：牌库和弃牌区都为空时如何摸牌？**
A：无法执行摸牌效果。

### 边界情况
**Q：司马家部队耗尽会触发游戏结束吗？**
A：不会。只有玩家部队耗尽才触发。

**Q：君主牌堆只有一张牌时如何重洗？**
A：君主牌堆没有移除规则，不会只有一张牌的情况。

**Q：先动值相同的东晋玩家如何决定顺序？**
A：牌面设计确保东晋玩家先动值不会相同。

